fix: spacing

--- a/src/assets/styles/components/track-chart.css
+++ b/src/assets/styles/components/track-chart.css
@@ -77,3 +77,9 @@
   margin-left: var(--sizing-lg);
   text-align: right;
 }
+
+@media screen and (min-width: 768px) {
+  .track__chart--meta--text {
+    max-width: 85%;
+  }
+}
